# rust-simple-httpd

./: .gitignore  Cargo.toml  LICENSE  Readme.md  index.html  rustfmt.toml
bruno/: Index.bru  bruno.json
src/: color.rs  config.rs  http.rs  http_server.rs  lib.rs  log.rs  main.rs  tcp.rs  tests.rs  util.rs  worker.rs
src/log/: mod.rs
tools/: clippy.sh  curl-upload.sh  curl.sh
