[package]
name = "rust-simple-httpd"
version = "0.1.0"
edition = "2021"

[features]
default = ["color", "log-trace"]
color = []
humantime = ["time/local-offset"]
log-err = []
log-warn = ["log-err"]
log-info = ["log-warn"]
log-verb = ["log-info"]
log-debug = ["log-verb"]
log-trace = ["log-debug"]

[dependencies]
anyhow = "1"
indoc = "2"
signal-hook = "0"
time = { version = "0", features = [ "formatting" ] }

[dev-dependencies]
rand = "0"
reqwest = { version = "0.12.4", default-features = false }
tokio = { version = "1.37.0", features = ["macros"] }

